# pi_opengl

./: .gitignore  .gitmodules  CMakeLists.txt
data/: CMakeLists.txt  fragment_passthrough.frag  vertex_passthrough.vert
src/: CMakeLists.txt  main.cpp
src/gfx/: Capture.h  Context.cpp  Context.h  EGLContext.cpp  EGLContext.h  SDLContext.cpp  SDLContext.h  Shader.cpp  Shader.h
src/util/: logger.cpp  logger.h
